# pi-security-camera

./: LICENCE.md  README.md  dev.sh  docker-compose.yaml  main.py  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: test_camera.yml  test_server.yml
camera/: .gitignore  README.md  mise.toml  pyproject.toml
camera/app/: config.py  main.py  surveillance_system.py  utils.py
camera/app/core/: state_machine.py
camera/app/core/api/: api_service_context.py
camera/app/core/cameras/: camera.py  dummy_camera.py  opencv_camera.py
camera/app/core/models/: camera.py  credential.py  credential_token.py  user.py  video.py
camera/app/core/serializers/: opencv_serializer.py
camera/app/fsms/camera/: camera.py  data.py
camera/app/policies/: api_loop_policy.py  loop_policy.py  offline_loop_policy.py
camera/app/services/: app_data_handler.py  camera_state_machine.py  data_reader.py  data_setup_service.py  file_manager.py
camera/app/services/api/: api_service.py  auth.py
camera/app/services/factories/: camera_factory.py  loop_policy_factory.py
camera/app/services/motion/: frame_difference_detector.py
camera/src/pisec_cam/: config.py  main.py  surveillance_system.py
camera/src/pisec_cam/core/: state_machine.py
camera/src/pisec_cam/core/api/: api_service_context.py
camera/src/pisec_cam/core/exceptions/: serialization.py  state_machine.py
camera/src/pisec_cam/core/models/: camera.py  credential.py  user.py
camera/src/pisec_cam/core/serializers/: opencv_serializer.py  serializer.py
camera/src/pisec_cam/core/types/: camera_type.py  loop_policy_type.py
camera/src/pisec_cam/fsms/camera/: camera.py  data.py  types.py
camera/src/pisec_cam/policies/: api_loop_policy.py  loop_policy.py  offline_loop_policy.py
camera/src/pisec_cam/services/: app_data_handler.py  camera_service.py  data_setup_service.py  file_manager.py  file_name_generator.py
camera/src/pisec_cam/services/api/: api_service.py  auth.py
camera/src/pisec_cam/services/factories/: camera_factory.py  loop_policy_factory.py
camera/src/pisec_cam/services/motion/: frame_difference_detector.py
camera/tests/: test_utils.py
camera/tests/core/models/: test_credential.py
camera/tests/pisec_cam/: test_utils.py
camera/tests/pisec_cam/core/models/: test_credential.py
camera/tests/pisec_cam/services/: test_app_data_handler.py  test_camera_service.py
camera/tests/services/: test_app_data_handler.py  test_camera_service.py  test_data_reader.py
client/: .gitignore  README.md  mise.toml  pubspec.yaml
client/.devcontainer/: Dockerfile  devcontainer.json
client/lib/: main.dart
pi-scripts/: .gitignore  README.md  main.py  mise.toml  pyproject.toml  record_video.py  take_photo.py
pi-scripts/.devcontainer/: Dockerfile  devcontainer.json
pi-scripts/app/: app.py  main.py
pi-scripts/app/api/routes/: functions.py
pi-scripts/app/core/cameras/: camera.py  opencv_camera.py
pi-scripts/app/core/exceptions/: serialization.py  state_machine.py
pi-scripts/app/core/models/: user.py  video.py
pi-scripts/app/core/serializers/: opencv_serializer.py  serializer.py
pi-scripts/app/services/: camera.py  camera_service.py  camera_state_machine.py  file_manager.py  file_name_generator.py
pi-scripts/app/services/motion/: frame_difference_detector.py  motion_detector.py
pi-scripts/tests/services/: test_camera_service.py
server/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  mise.toml  pyproject.toml  ruff.toml
server/.devcontainer/: Dockerfile  devcontainer.json
server/app/: api_schemas.py  app.py  database.py  db_models.py
server/app/api/: auth.py
server/app/api/models/: api_schemas.py  camera_credentials.py  camera_subscriptions.py  cameras.py  general.py  users.py  videos.py
server/app/api/routes/: auth.py  cameras.py  users.py  videos.py
server/app/auth/: dependencies.py  exceptions.py  models.py  routes.py  services.py  utils.py
server/app/core/: config.py  exceptions.py  utils.py
server/app/core/auth/: jwt.py
server/app/core/security/: hashing.py
server/app/core/validation/: regex.py  user_validation.py  video_validation.py
server/app/crud/: camera.py  camera_subscription.py  user.py  video.py
server/app/db/: database.py  db_models.py
server/app/routes/: camera_subscriptions.py  cameras.py  users.py  videos.py
server/app/services/: auth.py  camera.py  camera_credential.py  camera_subscription.py  user.py  video.py
server/scripts/e2e/: .gitignore  create_camera.nu  create_credential.nu  create_credential_login.nu  create_user.nu  delete_video.nu  download_video.nu  login_credential.nu  login_user.nu  upload_video.nu  view_videos.nu
server/scripts/e2e/data/: camera.json  user.json  user_login.json
server/src/pisec_server/: main.py
server/src/pisec_server/api/models/: camera_subscriptions.py  cameras.py  general.py  users.py  videos.py
server/src/pisec_server/api/routes/: cameras.py  users.py  videos.py
server/src/pisec_server/auth/: dependencies.py  exceptions.py  models.py  routes.py  services.py  utils.py
server/src/pisec_server/core/: config.py
server/src/pisec_server/core/security/: hashing.py
server/src/pisec_server/core/validation/: video_validation.py
server/src/pisec_server/db/: database.py
server/src/pisec_server/services/: camera.py  camera_credential.py  camera_subscription.py  user.py  video.py
server/tests/: conftest.py  test_app.py
server/tests/core/security/: test_hashing.py
server/tests/core/validation/: test_regex.py  test_user_validation.py  test_video_validation.py
server/tests/pisec_server/: conftest.py  test_app.py
server/tests/pisec_server/api/routes/: test_user.py
server/tests/pisec_server/core/security/: test_hashing.py
server/tests/pisec_server/core/validation/: test_regex.py  test_user_validation.py  test_video_validation.py
