[project]
name = "pisec-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pydantic[email]>=2.13.3",
    "typer>=0.24.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]

[project.scripts]
pisec-cam = "pisec_cam.main:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pisec_cam"

[tool.mypy]
strict = true
disallow_untyped_globals = true
strict_optional = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "I001",  # isort incorrect formatting
    "I002",  # isort missing required import
    "E501",  # add line-too-long rule
    "D",     # enable docstring enforcement
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
