[project]
name = "pi-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.133.1",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
